--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;  
   font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
-  height: 100vh;
-  width: 100vw;
 }
 .container {
   width: 90%;
