--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins: wght@ 300;400; 500; 600; 700; 800&display=swap");
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
-html, body {
+html{
   height: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden;  
-  font-family: "Poppins", sans-serif;
 }
+body {
+  font-family: "Poppins", sans-serif;
+ 
+}
+
 .container {
-  width: 90%;
+  width: 80%;
   margin: auto;
   padding: 20px;
 }
@@ -154,12 +158,23 @@ header .cta .btn {
 
 /* Hero Section Styles */
 .bg-img {
-  height: 600px;
-  width: 100%;
+  /* height: 600px;
+  width: 100%; */
   background: url("images/banner.jpg") no-repeat center center/cover;
-  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
+  /* box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
   image-rendering: -webkit-optimize-contrast;
-  image-rendering: optimize-contrast;
+  image-rendering: optimize-contrast; */
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  width: 100%;  /* Ensure the section takes full width */
+  margin: 0;    /* Reset any margin */
+  padding: 0; 
+  
 }
 .img-overlay {
   background-color: rgba(0, 0, 0, 0.526);
@@ -708,6 +723,12 @@ footer .content i {
   color: #0ba51d;
 }
 @media (max-width: 768px) {
+  html, body {
+
+    
+    overflow-x: hidden;  
+  }
+
   header .container {
     display: flex;
   }
